# voting

./: CMakeLists.txt  castVote.cpp  postgresql.cpp  postgresql.h  votingAdmin.cpp  votingConfig.cpp
approot/: text.xml
config/: voting.json
db/: voting00.sql  voting01.sql
include/: access.h  administration.h  alternative.h  castVote.h  closing.h  code.h  command.h  common.h  configuration.h  finish.h  invitations.h  minister.h  nameEmail.h  panel.h  passwCreation.h  pending.h  people.h  posibilities.h  postgresql.h  question.h  sendingVote.h  stepInfo.h  switcher.h  voteChoosing.h  voterList.h  votingPeople.h  votingSelection.h  votingType.h  witness.h
src/: access.cpp  administration.cpp  alternative.cpp  castVote.cpp  closing.cpp  code.cpp  command.cpp  configuration.cpp  finish.cpp  invitations.cpp  mainAdmin.cpp  mainCastVote.cpp  mainConfig.cpp  minister.cpp  nameEmail.cpp  panel.cpp  passwCreation.cpp  pending.cpp  people.cpp  posibilities.cpp  postgresql.cpp  question.cpp  sendingVote.cpp  stepInfo.cpp  switcher.cpp  voteChoosing.cpp  voterList.cpp  votingPeople.cpp  votingSelection.cpp  votingType.cpp  witness.cpp
